--- a/style/main.css
+++ b/style/main.css
@@ -18,6 +18,18 @@
 }
 
 
+#ruler { 
+	visibility: hidden; 
+	display: inline-block;
+	white-space: nowrap;
+	width: auto;
+	padding: 0px 5px 9px 5px;
+	text-transform: lowercase;
+	font: small-caps 20px "oswald";
+	letter-spacing: 1.5px;
+}
+
+
 /*--body--*/
 
 body {
@@ -73,7 +85,7 @@ body {
 }
 
 .location {
-opacity: 0;
+	opacity: 0;
 	padding: 2px 28px 7px 7px;
 	margin-bottom: 10px;
 
@@ -111,6 +123,7 @@ opacity: 0;
 /* 	padding-top: 4px; */
 }
 
+
 /*--nav--*/
 
 .nav {
@@ -138,8 +151,10 @@ opacity: 0;
 
 .nav select {
 	float:  left;
+	width: auto;
 	margin: 0 0 0 8px;
-	padding: 0px 5px 9px 2px;
+	/* padding: 0px 5px 9px 2px; */
+	padding: 0px 5px 9px 5px;
 	text-transform: lowercase;
 	font: small-caps 20px "oswald";
 	letter-spacing: 1.5px;
@@ -155,6 +170,12 @@ opacity: 0;
 	text-decoration: underline;
 }
 
+.nav select  a{
+	text-align: center;
+	
+	
+}
+
 .nav select:focus {
 	outline:0px none transparent;
 }
@@ -162,8 +183,6 @@ opacity: 0;
 .nav select:hover {
 	background-color:  #0392bc;
 }
-
-
 
 #loading_feed{
 	float:  left;
