--- a/style/main.css
+++ b/style/main.css
@@ -287,7 +287,7 @@ body {
 	list-style-type: none;
 	position: fixed;
 	top: 120px;
-	right: 11px;
+	right: 19px;
 	width: 10px;
 	
 }
@@ -588,6 +588,7 @@ body {
 	overflow-y: scroll;
 	overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
+	display: none;
 }
 
 .newsFeed ul{
@@ -646,7 +647,7 @@ body {
 	height: 98%;
 	float: right;
 	margin: -114px 0px 0px 38px;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
 }
@@ -869,4 +870,8 @@ input:focus {
 /*--other--*/
 .toast-success {
   background-color: #1b273d;
+}
+
+-webkit-scrollbar { 
+    display: none; 
 }
